# hermione

./: .gitignore  Cargo.toml  README.md
crates/hermione-coordinator/: Cargo.toml
crates/hermione-coordinator/src/: commands.rs  lib.rs  workspaces.rs
crates/hermione-coordinator/src/core/: commands.rs
crates/hermione-coordinator/src/records/: command.rs  workspace.rs
crates/hermione-coordinator/src/workspaces/: commands.rs  json.rs  mod.rs
crates/hermione-deeds/: Cargo.toml
crates/hermione-deeds/src/: json.rs  lib.rs
crates/hermione-deeds/src/base/: json.rs
crates/hermione-deeds/src/clients/: mod.rs
crates/hermione-deeds/src/dtos/: command.rs  workspace.rs
crates/hermione-deeds/src/impls/: json.rs
crates/hermione-deeds/src/types/: command.rs  mod.rs  workspace.rs
crates/hermione-deeds/src/workspaces/: json.rs  mod.rs
crates/hermione-drive/: Cargo.toml
crates/hermione-drive/src/: backup.rs  clipboard.rs  lib.rs  storage.rs  system.rs
crates/hermione-drive/src/notion/: api_client.rs  data_management.rs  mod.rs
crates/hermione-drive/src/providers/: mod.rs  powershell.rs
crates/hermione-drive/src/services/: backup.rs  mod.rs  storage.rs  system.rs
crates/hermione-drive/src/sqlite/: backup_credentials.rs  commands.rs  mod.rs  workspaces.rs
crates/hermione-drive/tests/sqlite/: create_workspaces_table_if_not_exists_test.rs  delete_workspace_test.rs  find_workspace_test.rs  insert_workspace_test.rs  list_workspaces_test.rs  main.rs  restore_workspace_test.rs  update_command_test.rs  update_workspace_test.rs
crates/hermione-eyes/: Cargo.toml
crates/hermione-eyes/src/: app.rs  colors.rs  entities.rs  logs.rs  main.rs  message.rs  presenters.rs  router.rs  settings.rs  tea.rs  tui.rs  types.rs
crates/hermione-eyes/src/app/: message.rs  mod.rs  router.rs
crates/hermione-eyes/src/clients/: executor.rs  memories.rs  mod.rs  organizer.rs  powershell.rs
crates/hermione-eyes/src/components/: command_palette.rs  confirmation.rs  mod.rs
crates/hermione-eyes/src/helpers/: colors.rs  command_palette.rs  input.rs  mod.rs
crates/hermione-eyes/src/models/: command_palette.rs  create_command.rs  create_workspace.rs  edit_command.rs  edit_workspace.rs  get_command.rs  get_workspace.rs  list_workspaces.rs  mod.rs  new_command.rs  new_workspace.rs
crates/hermione-eyes/src/parameters/: mod.rs  powershell.rs
crates/hermione-eyes/src/presenters/: command.rs  workspace.rs
crates/hermione-eyes/src/router/: mod.rs  powershell.rs
crates/hermione-eyes/src/routes/: create_command.rs  create_workspace.rs  delete_command.rs  delete_workspace.rs  edit_command.rs  edit_workspace.rs  execute_command.rs  get_command.rs  get_workspace.rs  list_workspaces.rs  mod.rs  new_command.rs  new_workspace.rs  update_command.rs  update_workspace.rs
crates/hermione-eyes/src/widgets/: input.rs  list.rs  list_item.rs  list_state.rs  mod.rs  scroll.rs
crates/hermione-internals/: Cargo.toml
crates/hermione-internals/src/: file_system.rs  lib.rs  powershell.rs
crates/hermione-internals/src/sqlite/: backup_credentials.rs  commands.rs  mod.rs  workspaces.rs
crates/hermione-internals/tests/sqlite/: create_workspaces_table_if_not_exists_test.rs  delete_workspace_test.rs  find_workspace_test.rs  insert_workspace_test.rs  list_workspaces_test.rs  main.rs  restore_workspace_test.rs  update_command_test.rs  update_workspace_test.rs
crates/hermione-nexus/: Cargo.toml
crates/hermione-nexus/src/: create_workspace.rs  failure.rs  get_workspace.rs  lib.rs  list_workspaces.rs  update_workspace.rs
crates/hermione-nexus/src/definitions/: backup.rs  commands.rs  mod.rs  workspaces.rs
crates/hermione-nexus/src/operations/: copy_command_to_clipboard.rs  create_command.rs  create_workspace.rs  delete_backup_credentials.rs  delete_command.rs  delete_commands.rs  delete_workspace.rs  execute_command.rs  execute_program.rs  export.rs  export_command.rs  export_workspace.rs  get_backup_credentials.rs  get_command.rs  get_workspace.rs  import.rs  import_commands.rs  import_workspaces.rs  list_backup_credentials.rs  list_commands.rs  list_workspaces.rs  mod.rs  save_backup_credentials.rs  update_command.rs  update_workspace.rs
crates/hermione-nexus/src/services/: backup.rs  clipboard.rs  mod.rs  storage.rs  system.rs
crates/hermione-nexus/tests/operations/: clipboard.rs  copy_command_to_clipboard_test.rs  create_command_test.rs  create_workspace_test.rs  delete_backup_credentials_test.rs  delete_workspace_test.rs  detele_command_test.rs  execute_command_test.rs  execute_program_test.rs  export_command_test.rs  export_commands_test.rs  export_test.rs  export_workspace_test.rs  export_workspaces_test.rs  fixtures.rs  get_command_test.rs  get_workspace_test.rs  import_commands_from_notion_test.rs  import_test.rs  import_workspaces_from_notion_test.rs  import_workspaces_test.rs  main.rs  storage.rs  (+10 more)
crates/hermione-notion/: Cargo.toml  settings.json.example
crates/hermione-notion-sync/: Cargo.toml
crates/hermione-notion-sync/src/: cli.rs  main.rs  notion.rs  screen.rs  settings.rs  statistics.rs
crates/hermione-notion/examples/: client.rs
crates/hermione-notion/src/: cli.rs  json.rs  lib.rs  main.rs  provider.rs
crates/hermione-notion/tests/: test_client.rs
crates/hermione-storage/: .gitignore  Cargo.toml
crates/hermione-storage/src/: backup.rs  database.rs  extensions.rs  file_system.rs  impls.rs  lib.rs  notion.rs  sqlite.rs
crates/hermione-terminal/: .gitignore  Cargo.toml
crates/hermione-terminal/src/: app_dir.rs  command_palette.rs  coordinator.rs  features.rs  keyboard.rs  logs.rs  main.rs  message.rs  parameters.rs  params.rs  presenters.rs  program_lib.rs  router.rs  routes.rs  settings.rs  smart_input.rs  terminal.rs  themes.rs  tui.rs
crates/hermione-terminal/themes/: github_dark.json
crates/hermione-tui/: Cargo.toml
crates/hermione-tui/src/: app.rs  asdf.rs  environment.rs  key_mappings.rs  lib.rs  main.rs  session.rs
crates/hermione-wand/: Cargo.toml
crates/hermione-wand/src/: json.rs  lib.rs  powershell.rs
crates/hermione-wand/tests/: notion_client.rs
(+649 files in other folders)
