[workspace]
resolver = "2"
members = [
    "crates/hermione-drive",
    "crates/hermione-nexus",
    "crates/hermione-notion",
    "crates/hermione-ops",
    "crates/hermione-storage",
    "crates/hermione-terminal",
    "crates/hermione-tracing",
    "crates/hermione-tui",
]

[workspace.dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = "4.5.20"
dirs = "5.0.1"
eyre = "0.6.12"
ratatui = "0.29.0"
reqwest = "0.12.8"
rusqlite = "0.32.1"
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
ureq = "2.10.1"
uuid = "1.10.0"

hermione-drive = { path = "crates/hermione-drive"}
hermione-nexus = { path = "crates/hermione-nexus" }
hermione-notion = { path = "crates/hermione-notion" }
hermione-ops = { path = "crates/hermione-ops" }
hermione-storage = { path = "crates/hermione-storage" }
hermione-tracing = { path = "crates/hermione-tracing" }
hermione-tui = { path = "crates/hermione-tui" }
