[package]
name = "hermione-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_coordinator"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

hermione-core = { workspace = true }
hermione-json = { workspace = true }
