[package]
name = "hermione-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_coordinator"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

hermione-core = { workspace = true }
