[package]
name = "hermione-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_coordinator"

[dependencies]
anyhow = { workspace = true }

hermione-ops = { workspace = true, features = ["extensions"] }
hermione-powershell = { workspace = true }
hermione-storage = { workspace = true, features = ["extensions"] }
