[package]
name = "hermione-drive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_drive"

[dependencies]
rusqlite = { workspace = true, features = ["array", "bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, features = ["json"] }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
