[package]
name = "hermione-drive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_drive"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
rusqlite = { workspace = true, features = ["array", "bundled"] }
rusty-notion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, features = ["json"] }
uuid = { workspace = true }

hermione-nexus = { workspace = true }
hermione-internals = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
