[package]
name = "hermione-drive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_drive"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
rusqlite = { workspace = true }
rusty-notion = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
ureq = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }

hermione-nexus = { workspace = true }
hermione-internals = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
