[package]
name = "hermione-eyes"
version = "0.1.0"
edition = "2021"
default-run = "hermione-eyes"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
eyre = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

hermione-deeds = { workspace = true }

