[package]
name = "hermione-internals"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

hermione-nexus = { workspace = true }
