[package]
name = "hermione-nexus"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_nexus"

[dependencies]
chrono = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
uuid = { workspace = true, features = ["v4"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
