[package]
name = "hermione-notion-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }

hermione-notion = { workspace = true }
hermione-notion-serde = { workspace = true }
hermione-ops = { workspace = true, features = ["notion", "backup"] }
hermione-storage = { workspace = true }
hermione-terminal-directory = { workspace = true }
hermione-tracing = { workspace = true }
