[package]
name = "hermione-notion"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_notion"

[dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
httpmock = "0.7.0"
hermione-notion-serde = { workspace = true }
