[package]
name = "hermione-notion"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }

hermione-ops = { workspace = true, features = ["notion", "backup"] }
hermione-storage = { workspace = true, features = ["backup"] }
hermione-tracing = { workspace = true }

[dev-dependencies]
httpmock = "0.7.0"
