[package]
name = "hermione-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_storage"

[features]
backup = []
extensions = []

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
eyre = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }

hermione-ops = { workspace = true, features = ["notion", "extensions"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
