[package]
name = "hermione-terminal"
version = "0.1.0"
edition = "2021"
default-run = "hermione-terminal"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
eyre = { workspace = true }
ratatui = { workspace = true, features = ["serde"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
ureq = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

hermione-drive = { workspace = true }
hermione-nexus = { workspace = true }
hermione-internals = { workspace = true }
