[package]
name = "hermione-terminal"
version = "0.1.0"
edition = "2021"
default-run = "hermione-terminal"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ratatui = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
uuid = { workspace = true }

hermione-drive = { workspace = true }
hermione-nexus = { workspace = true }
