[package]
name = "hermione-wand"
version = "0.1.0"
edition = "2021"

[lib]
name = "hermione_wand"

[dependencies]
eyre = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
httpmock = "0.7.0"
tokio = { workspace = true, features = ["macros"] }
